--- a/L9/L9.csproj
+++ b/L9/L9.csproj
@@ -16,9 +16,11 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
+    <PackageReference Include="Mime" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\Docs\CVs\" />
     <Folder Include="wwwroot\Images\CategoryImages\" />
     <Folder Include="wwwroot\Images\ProductImages\" />
   </ItemGroup>
